image way too big fixing that

--- a/project-1/Cherylirene/index.css
+++ b/project-1/Cherylirene/index.css
@@ -27,6 +27,6 @@ body {
     }
 
     img {
-      max-width: 100px;
+      max-width: 80px;
       border-radius: 8px;
     }
